[gd_scene load_steps=2 format=3 uid="uid://b65o5apaw32"]

[ext_resource type="Script" uid="uid://dmh8u6kaliftf" path="res://source/main_menu/play_menu/game_selection_menu/game_option_node.gd" id="1_dcoso"]

[node name="GameOption" type="Control"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dcoso")
color_normal = Color(0.2, 0.2, 0.2, 0.313726)
color_selected = Color(0.15, 0.15, 0.15, 0.752941)

[node name="BackgroundColor" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="IconSpace" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IconTexture" type="TextureRect" parent="HBoxContainer/IconSpace"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoSpace" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/InfoSpace"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer/InfoSpace/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="HBoxContainer/InfoSpace/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "(No name)"
vertical_alignment = 1
clip_text = true

[node name="FilePathNode" type="Control" parent="HBoxContainer/InfoSpace/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="FilePathLabel" type="Label" parent="HBoxContainer/InfoSpace/VBoxContainer/FilePathNode"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "file path"
vertical_alignment = 1
clip_text = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
